major styling overhaul

--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 	<title>Lukas Vasadi</title>
-	<!-- Load an icon library to show a hamburger menu (bars) on small screens -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 	<link rel="stylesheet" href="styles/styles.css" />
 </head>
@@ -25,8 +24,7 @@
 		<a href="mailto:lukas.vasadi@gmail.com"><i class="fa fa-envelope"></i></a>
 	</div>
 	<main>
-        <h1 class="center extra-padding">Explore by topic</h1>
-        <div class="grid gallery">
+        <section class="grid">
             <div class="thumbnail-container">
                 <h2><a href="posts/linux.html">Linux Command Line</a></h2>
                 <a href="posts/linux.html"><img src="images/ubuntu_cli_sudo_500x331.jpg" alt=""></a>
@@ -65,11 +63,9 @@
                     </p>
                 </div>
             </div>
-        </div>
+        </section>
 	</main>
-	<footer>
-		<p>Copyright &copy; 2021 Lukas Vasadi</p>
-	</footer>
+	<footer><p>Copyright &copy; 2021 Lukas Vasadi</p></footer>
 	<script src="scripts/main.js"></script>
 </body>
 </html>
