--- a/about.html
+++ b/about.html
@@ -23,23 +23,14 @@
         <a href="gallery.html">Gallery</a>
         <a href="mailto:lukas.vasadi@gmail.com"><i class="fa fa-envelope"></i></a>
     </div>
-    <main> 
-		<div id="landing">
-			<div>
-				<img class="banner" src="images/electronics_generic_1000x667.jpg" alt="">
-			</div>
-			<div id="landing-msg">
-				<h1 class="code-text">product-focused engineering</h1>
-				<p>
-                    Too often we treat hardware and software as separate entities. This site promotes the blending of hardware, 
-                    software, and art in focused product development.
-                </p>
-			</div>
-		</div>
-    </main>
-    <footer>
-        <p>Copyright &copy; 2021 Lukas Vasadi</p>
-    </footer>
+    <header>
+        <img class="banner" src="images/electronics_generic_1000x667.jpg" alt="">
+        <div>
+            <h1 class="code-text">product-focused engineering</h1>
+            <p>This site promotes the blending of hardware, software, and art in focused product development.</p>
+        </div>
+    </header>
+    <footer><p>Copyright &copy; 2021 Lukas Vasadi</p></footer>
 	<script src="scripts/main.js"></script>
 </body>
 </html>
