--- a/gallery.html
+++ b/gallery.html
@@ -24,7 +24,7 @@
 		<a href="mailto:lukas.vasadi@gmail.com"><i class="fa fa-envelope"></i></a>
 	</div>
 	<main>
-        <section class="grid">
+        <section class="grid gallery">
 			<div class="tile">
 				<h2><a href="posts/linux.html">Linux Command Line</a></h2>
 				<a href="posts/linux.html"><img src="images/ubuntu_cli_sudo_500x331.jpg" alt=""></a>
