--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		</div>
 	</header>
 	<main>
-		<section class="grid">
+		<section class="grid gallery">
 			<div class="tile">
 				<h2><a href="posts/linux.html">Linux Command Line</a></h2>
 				<a href="posts/linux.html"><img src="images/ubuntu_cli_sudo_500x331.jpg" alt=""></a>
