--- a/gallery.html
+++ b/gallery.html
@@ -41,8 +41,8 @@
 				<p>Master the commands to manage any code repository.</p>
 			</div>
 			<div class="tile">
-				<h2><a href="posts/coming-soon.html">Raspberry Pi 4</a></h2>
-				<a href="posts/coming-soon.html"><img src="images/raspi_500x331.jpg" alt=""></a>
+				<h2><a href="posts/raspi.html">Raspberry Pi 4</a></h2>
+				<a href="posts/raspi.html"><img src="images/raspi_500x331.jpg" alt=""></a>
 				<p>A powerful learning instrument for computer engineering, the Raspberry Pi can accelerate hardware prototyping.</p>
 			</div>
 		</section>
