sticky sidebar toc

--- a/gallery.html
+++ b/gallery.html
@@ -26,7 +26,7 @@
 	<main>
         <section class="grid gallery">
 			<div class="tile">
-				<h2><a href="posts/linux.html">Linux Command Line</a></h2>
+				<h2><a href="posts/linux.html">Linux</a></h2>
 				<a href="posts/linux.html"><img src="images/ubuntu_cli_sudo_500x331.jpg" alt=""></a>
 				<p>Learn to become a superuser.</p>
 			</div>
