--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-	<meta property="og:title" content="Lukas Vasadi"/>
-	<meta property="og:description" content="Hardware and software for product development."/>
+	<meta property="og:title" content="Lukas Vasadi" />
+	<meta property="og:description" content="Hardware and software for product development." />
 	<meta property="og:image" content="https://lukasvasadi.github.io/images/programming_1000x800.jpg">
 	<title>Lukas Vasadi</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 	<link rel="stylesheet" href="styles/styles.css" />
 </head>
+
 <body>
 	<nav>
 		<a href="index.html" class="code-text">lukasvasadi</a>
@@ -53,11 +55,15 @@
 			<div class="tile">
 				<h2><a href="posts/raspi.html">Raspberry Pi 4</a></h2>
 				<a href="posts/raspi.html"><img src="images/raspi_500x331.jpg" alt=""></a>
-				<p>A powerful learning instrument for computer engineering, the Raspberry Pi can accelerate hardware prototyping.</p>
+				<p>A powerful learning instrument for computer engineering, the Raspberry Pi can accelerate hardware
+					prototyping.</p>
 			</div>
 		</section>
 	</main>
-	<footer><p>Copyright &copy; 2021 Lukas Vasadi</p></footer>
+	<footer>
+		<p>Copyright &copy; 2021 Lukas Vasadi</p>
+	</footer>
 	<script src="scripts/main.js"></script>
 </body>
+
 </html>
