correct page titles for about and gallery

--- a/gallery.html
+++ b/gallery.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-	<title>Lukas Vasadi</title>
+	<title>Gallery</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 	<link rel="stylesheet" href="styles/styles.css" />
 </head>
+
 <body>
 	<nav>
 		<a href="index.html" class="code-text">lukasvasadi</a>
@@ -24,7 +26,7 @@
 		<a href="mailto:lukas.vasadi@gmail.com"><i class="fa fa-envelope"></i></a>
 	</div>
 	<main>
-        <section class="grid gallery">
+		<section class="grid gallery">
 			<div class="tile">
 				<h2><a href="posts/linux.html">Linux</a></h2>
 				<a href="posts/linux.html"><img src="images/ubuntu_cli_sudo_500x331.jpg" alt=""></a>
@@ -40,14 +42,23 @@
 				<a href="posts/git.html"><img src="images/git_500x331.jpg" alt=""></a>
 				<p>Master the commands to manage any code repository.</p>
 			</div>
+			<!-- <div class="tile">
+				<h2><a href="posts/stm32.html">STM32</a></h2>
+				<a href="posts/stm32.html"><img src="images/stm32.jpg" alt=""></a>
+				<p>STM32 programming with VSCode.</p>
+			</div> -->
 			<div class="tile">
 				<h2><a href="posts/raspi.html">Raspberry Pi 4</a></h2>
 				<a href="posts/raspi.html"><img src="images/raspi_500x331.jpg" alt=""></a>
-				<p>A powerful learning instrument for computer engineering, the Raspberry Pi can accelerate hardware prototyping.</p>
+				<p>A powerful learning instrument for computer engineering, the Raspberry Pi can accelerate hardware
+					prototyping.</p>
 			</div>
 		</section>
 	</main>
-	<footer><p>Copyright &copy; 2021 Lukas Vasadi</p></footer>
+	<footer>
+		<p>Copyright &copy; 2021 Lukas Vasadi</p>
+	</footer>
 	<script src="scripts/main.js"></script>
 </body>
+
 </html>
