--- a/about.html
+++ b/about.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Lukas Vasadi</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>About</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="styles/styles.css" />
 </head>
+
 <body>
     <nav>
         <a href="index.html" class="code-text">lukasvasadi</a>
@@ -30,7 +32,10 @@
             <p>This site promotes the blending of hardware, software, and art in focused product development.</p>
         </div>
     </header>
-    <footer><p>Copyright &copy; 2021 Lukas Vasadi</p></footer>
-	<script src="scripts/main.js"></script>
+    <footer>
+        <p>Copyright &copy; 2021 Lukas Vasadi</p>
+    </footer>
+    <script src="scripts/main.js"></script>
 </body>
+
 </html>
