replace thumbnails and condense post descriptions

--- a/gallery.html
+++ b/gallery.html
@@ -29,18 +29,18 @@
 		<section class="grid gallery">
 			<div class="tile">
 				<h2><a href="posts/linux.html">Linux</a></h2>
-				<a href="posts/linux.html"><img src="images/ubuntu_cli_sudo_500x331.jpg" alt=""></a>
-				<p>Learn to become a superuser.</p>
+				<a href="posts/linux.html"><img src="images/linux_debian_comp.jpg" alt=""></a>
+				<p>Become a superuser.</p>
 			</div>
 			<div class="tile">
 				<h2><a href="posts/powershell.html">PowerShell</a></h2>
-				<a href="posts/powershell.html"><img src="images/powershell_500x331.jpg" alt=""></a>
-				<p>One of the most powerful tools for modern IT administration.</p>
+				<a href="posts/powershell.html"><img src="images/windows_laptop_comp.jpg" alt=""></a>
+				<p>Learn modern IT administration.</p>
 			</div>
 			<div class="tile">
 				<h2><a href="posts/git.html">Git</a></h2>
-				<a href="posts/git.html"><img src="images/git_500x331.jpg" alt=""></a>
-				<p>Master the commands to manage any code repository.</p>
+				<a href="posts/git.html"><img src="images/git_comp.jpg" alt=""></a>
+				<p>Manage any code repository.</p>
 			</div>
 			<!-- <div class="tile">
 				<h2><a href="posts/stm32.html">STM32</a></h2>
@@ -48,10 +48,14 @@
 				<p>STM32 programming with VSCode.</p>
 			</div> -->
 			<div class="tile">
-				<h2><a href="posts/raspi.html">Raspberry Pi 4</a></h2>
-				<a href="posts/raspi.html"><img src="images/raspi_500x331.jpg" alt=""></a>
-				<p>A powerful learning instrument for computer engineering, the Raspberry Pi can accelerate hardware
-					prototyping.</p>
+				<h2><a href="posts/raspi.html">Raspberry Pi</a></h2>
+				<a href="posts/raspi.html"><img src="images/raspi_comp.jpg" alt=""></a>
+				<p>Accelerate hardware prototyping.</p>
+			</div>
+			<div class="tile">
+				<h2><a href="posts/environment.html">Environment Setup</a></h2>
+				<a href="posts/environment.html"><img src="images/macbook_code_comp.jpg" alt=""></a>
+				<p>Configure an environment for high productivity.</p>
 			</div>
 		</section>
 	</main>
