--- a/tutorials.html
+++ b/tutorials.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-	<title>Gallery</title>
+	<title>Turorials</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 	<link rel="stylesheet" href="styles/styles.css" />
 </head>
@@ -15,14 +15,14 @@
 		<a href="index.html" class="code-text">lukasvasadi</a>
 		<div id="desktop-menu">
 			<a href="about.html">About</a>
-			<a href="gallery.html">Gallery</a>
+			<a href="tutorials.html">Tutorials</a>
 			<a href="mailto:lukas.vasadi@gmail.com"><i class="fa fa-envelope"></i></a>
 		</div>
 		<a href="javascript:void(0);" class="hamburger" onclick="menuDropdown()"><i class="fa fa-bars"></i></a>
 	</nav>
 	<div id="mobile-menu">
 		<a href="about.html">About</a>
-		<a href="gallery.html">Gallery</a>
+		<a href="tutorials.html">Tutorials</a>
 		<a href="mailto:lukas.vasadi@gmail.com"><i class="fa fa-envelope"></i></a>
 	</div>
 	<main>
