--- a/about.html
+++ b/about.html
@@ -26,11 +26,30 @@
         <a href="tutorials.html">Tutorials</a>
         <a href="mailto:lukas.vasadi@gmail.com"><i class="fa fa-envelope"></i></a>
     </div>
-    <header>
+    <header class="about">
         <img class="banner" src="images/electronics_breadboard.jpg" alt="">
         <div>
-            <h1 class="code-text">product-focused engineering</h1>
-            <p>This site promotes the blending of hardware, software, and art in focused product development.</p>
+            <h1 class="code-text">interdisciplinary engineering</h1>
+            <p>
+                When applying for college, I attended a senior level tissue engineering class at Stony Brook University
+                and, at least for the next few years, wanted to help design machines to grow human tissues for
+                implantation.
+            </p>
+            <p>
+                However, my interests deviated when I joined a small biosensor startup in the UK and started designing
+                electronics and mechanical systems as part of a novel electrical method for quantifying drug molecule
+                binding efficiency.
+            </p>
+            <p>
+                After our team raised some venture capital, I returned to the US and joined a tissue engineering
+                startup, where my main focus has been building hardware and software for rapid imaging systems. In this
+                way, my early interests and experiences came full-circle.
+            </p>
+            <p>
+                Along this journey, I benefited from many opensource learning resources, ranging from Linux to PCB
+                design to web development. This site is intended to contribute back to the engineering/hacker/tinkerer
+                communities through tutorials and projects.
+            </p>
         </div>
     </header>
     <footer>
