--- a/about.html
+++ b/about.html
@@ -32,18 +32,17 @@
             <h1 class="code-text">interdisciplinary engineering</h1>
             <p>
                 When applying for college, I attended a senior level tissue engineering class at Stony Brook University
-                and, at least for the next few years, wanted to help design machines to grow human tissues for
-                implantation.
+                and, at least for the next few years, wanted to design machines to grow human tissues for implantation.
             </p>
             <p>
-                However, my interests deviated when I joined a small biosensor startup in the UK and started designing
-                electronics and mechanical systems as part of a novel electrical method for quantifying drug molecule
+                However, my interests deviated after joining a small biosensor startup in the UK, where I designed
+                electronics and mechanical systems to support a novel electrical method for quantifying drug molecule
                 binding efficiency.
             </p>
             <p>
-                After our team raised some venture capital, I returned to the US and joined a tissue engineering
-                startup, where my main focus has been building hardware and software for rapid imaging systems. In this
-                way, my early interests and experiences came full-circle.
+                After our team raised investment capital, I returned to the US to join a tissue engineering startup,
+                where my main focus has been building hardware and software for rapid imaging systems. In this way, my
+                early interests and later experiences came full-circle.
             </p>
             <p>
                 Along this journey, I benefited from many opensource learning resources, ranging from Linux to PCB
