break title to prevent overflow

--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
     <header class="about">
         <img class="banner" src="images/electronics_breadboard.jpg" alt="">
         <div>
-            <h1 class="code-text">interdisciplinary engineering</h1>
+            <h1 class="code-text">inter-disciplinary engineering</h1>
             <p>
                 When applying for college, I attended a senior level tissue engineering class at Stony Brook University
                 and, at least for the next few years, wanted to design machines to grow human tissues for implantation.
