--- a/about.html
+++ b/about.html
@@ -31,23 +31,24 @@
         <div>
             <h1>Interdisciplinary engineering</h1>
             <p>
-                When applying for college, I attended a senior level tissue engineering class at Stony Brook University
-                and, at least for the next few years, wanted to design machines to grow human tissues for implantation.
+                Before starting college, I attended a senior-level tissue engineering class at Stony Brook University
+                and, at least for the next few years, wanted to design machines to grow human tissues for regenerative
+                medicine.
             </p>
             <p>
-                However, my interests deviated after joining a small biosensor startup in the UK, where I designed
-                electronics and mechanical systems to support a novel electrical method for quantifying drug molecule
-                binding efficiency.
+                My interests deviated after joining a small biosensor startup in the UK, where I designed electrical
+                and mechanical systems to support a novel electrical method for quantifying drug molecule binding
+                efficiency.
             </p>
             <p>
                 After our team raised investment capital, I returned to the US to join a tissue engineering startup,
-                where my main focus has been building hardware and software for rapid imaging systems. In this way, my
-                early interests and later experiences came full-circle.
+                where my main focus has been building hardware and software for rapid imaging systems. Almost by
+                accident, my early interests and later experiences came full-circle.
             </p>
             <p>
-                Along this journey, I benefited from many opensource learning resources, ranging from Linux to PCB
-                design to web development. This site is intended to contribute back to the engineering/hacker/tinkerer
-                communities through tutorials and projects.
+                Along the way, I benefited from many opensource learning resources, ranging from Linux to PCB design to
+                web development. This site is intended to contribute back to the engineering/hacker/tinkerer communities
+                through tutorials and projects.
             </p>
         </div>
     </header>
