optimize image size

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<a href="mailto:lukas.vasadi@gmail.com"><i class="fa fa-envelope"></i></a>
 	</div>
 	<header>
-		<img src="images/mac_programming.jpg">
+		<img src="images/programming_comp.jpg">
 		<div>
 			<h1>Linux, Arduino, Raspberry Pi, and more...</h1>
 			<p>Blend hardware and software to create feature-rich products <i class="fa fa-rocket"></i></p>
