improve aboutme language

--- a/about.html
+++ b/about.html
@@ -36,14 +36,14 @@
                 medicine.
             </p>
             <p>
-                My interests deviated after joining a small biosensor startup in the UK, where I designed electrical
-                and mechanical systems to support a novel electrical method for quantifying drug molecule binding
-                efficiency.
+                My interests deviated after joining a small biosensor startup in the UK, where I designed sensors,
+                circuit boards, and robotic systems to support a novel electrical method for quantifying drug molecule
+                binding efficiency.
             </p>
             <p>
                 After our team raised investment capital, I returned to the US to join a tissue engineering startup,
                 where my main focus has been building hardware and software for rapid imaging systems. Almost by
-                accident, my early interests and later experiences came full-circle.
+                accident, my early interests and later experiences coincided.
             </p>
             <p>
                 Along the way, I benefited from many opensource learning resources, ranging from Linux to PCB design to
