start post on electron-react configuration

--- a/tutorials.html
+++ b/tutorials.html
@@ -58,6 +58,11 @@
 				<a href="posts/environment.html"><img src="images/macbook_code_comp.jpg" alt=""></a>
 				<p>Configure an environment for high productivity.</p>
 			</div>
+			<!-- <div class="tile">
+				<h2><a href="posts/electron-react.html">Electron React</a></h2>
+				<a href="posts/electron-react.html"><img src="images/react_comp.jpg" alt=""></a>
+				<p>Build an Electron app with a React frontend.</p>
+			</div> -->
 		</section>
 	</main>
 	<footer>
