use personal font awesome CDN to serve icons

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 	<meta property="og:title" content="Lukas Vasadi" />
 	<meta property="og:description" content="Hardware and software for product development." />
-	<meta property="og:image" content="https://lukasvasadi.github.io/images/programming_1000x800.jpg">
+	<meta property="og:image" content="https://lukasvasadi.github.io/images/programming_comp.jpg">
 	<title>Lukas Vasadi</title>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 	<link rel="stylesheet" href="styles/styles.css" />
 	<link rel="icon" href="icons/vasadi_gear_icon.png">
+	<script src="https://kit.fontawesome.com/1b5e59a99b.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
