--- a/about.html
+++ b/about.html
@@ -1,61 +1,70 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>About</title>
     <link rel="stylesheet" href="styles/styles.css" />
-    <link rel="icon" href="icons/vasadi_gear_icon.png">
-    <script src="https://kit.fontawesome.com/1b5e59a99b.js" crossorigin="anonymous"></script>
-</head>
+    <link rel="icon" href="icons/vasadi_gear_icon.png" />
+    <script
+      src="https://kit.fontawesome.com/1b5e59a99b.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
 
-<body>
+  <body>
     <nav>
-        <a href="index.html" class="code-text">lukasvasadi</a>
-        <div id="desktop-menu">
-            <a href="about.html">About</a>
-            <a href="tutorials.html">Tutorials</a>
-            <a href="mailto:lukas.vasadi@gmail.com"><i class="fa fa-envelope"></i></a>
-        </div>
-        <a href="javascript:void(0);" class="hamburger" onclick="menuDropdown()"><i class="fa fa-bars"></i></a>
-    </nav>
-    <div id="mobile-menu">
+      <a href="index.html" class="code-text">lukasvasadi</a>
+      <div id="desktop-menu">
         <a href="about.html">About</a>
         <a href="tutorials.html">Tutorials</a>
-        <a href="mailto:lukas.vasadi@gmail.com"><i class="fa fa-envelope"></i></a>
+        <a href="mailto:lukas.vasadi@gmail.com"
+          ><i class="fa fa-envelope"></i
+        ></a>
+      </div>
+      <a href="javascript:void(0);" class="hamburger" onclick="menuDropdown()"
+        ><i class="fa fa-bars"></i
+      ></a>
+    </nav>
+    <div id="mobile-menu">
+      <a href="about.html">About</a>
+      <a href="tutorials.html">Tutorials</a>
+      <a href="mailto:lukas.vasadi@gmail.com"><i class="fa fa-envelope"></i></a>
     </div>
-    <header class="about">
-        <img class="banner" src="images/electronics_breadboard_comp.jpg" alt="">
-        <div>
-            <h1>Interdisciplinary engineering</h1>
-            <p>
-                Before starting college, I attended a senior-level tissue engineering class at Stony Brook University
-                and, at least for the next few years, wanted to design machines to grow human tissues for regenerative
-                medicine.
-            </p>
-            <p>
-                My interests deviated after joining a small biosensor startup in the UK, where I designed sensors,
-                circuit boards, and robotic systems to support a novel electrical method for quantifying drug molecule
-                binding efficiency.
-            </p>
-            <p>
-                After our team raised investment capital, I returned to the US to join a tissue engineering startup,
-                where my main focus has been building hardware and software for rapid imaging systems. Almost by
-                accident, my early interests and later experiences coincided.
-            </p>
-            <p>
-                Along the way, I benefited from many opensource learning resources, ranging from Linux to PCB design to
-                web development. This site is intended to contribute back to the engineering/hacker/tinkerer communities
-                through tutorials and projects.
-            </p>
-        </div>
-    </header>
+    <div class="landing about">
+      <img class="banner" src="images/electronics_breadboard_comp.jpg" alt="" />
+      <div>
+        <h1>Interdisciplinary engineering</h1>
+        <p>
+          Before starting college, I attended a senior-level tissue engineering
+          class at Stony Brook University and, at least for the next few years,
+          wanted to design machines to grow human tissues for regenerative
+          medicine.
+        </p>
+        <p>
+          My interests deviated after joining a small biosensor startup in the
+          UK, where I designed sensors, circuit boards, and robotic systems to
+          support a novel electrical method for quantifying drug molecule
+          binding efficiency.
+        </p>
+        <p>
+          After our team raised investment capital, I returned to the US to join
+          a tissue engineering startup, where my main focus has been building
+          hardware and software for rapid imaging systems. Almost by accident,
+          my early interests and later experiences coincided.
+        </p>
+        <p>
+          Along the way, I benefited from many opensource learning resources,
+          ranging from Linux to PCB design to web development. This site is
+          intended to contribute back to the engineering/hacker/tinkerer
+          communities through tutorials and projects.
+        </p>
+      </div>
+    </div>
     <footer>
-        <p>Copyright &copy; 2021 Lukas Vasadi</p>
+      <p>Copyright &copy; 2021 Lukas Vasadi</p>
     </footer>
     <script src="scripts/main.js"></script>
-</body>
-
+  </body>
 </html>
