--- a/index.html
+++ b/index.html
@@ -1,69 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta property="og:title" content="Lukas Vasadi" />
+    <meta
+      property="og:description"
+      content="Hardware and software for product development."
+    />
+    <meta
+      property="og:image"
+      content="https://lukasvasadi.github.io/images/programming_comp.jpg"
+    />
+    <title>Lukas Vasadi</title>
+    <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="icon" href="icons/vasadi_gear_icon.png" />
+    <script
+      src="https://kit.fontawesome.com/1b5e59a99b.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
 
-<head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-	<meta property="og:title" content="Lukas Vasadi" />
-	<meta property="og:description" content="Hardware and software for product development." />
-	<meta property="og:image" content="https://lukasvasadi.github.io/images/programming_comp.jpg">
-	<title>Lukas Vasadi</title>
-	<link rel="stylesheet" href="styles/styles.css" />
-	<link rel="icon" href="icons/vasadi_gear_icon.png">
-	<script src="https://kit.fontawesome.com/1b5e59a99b.js" crossorigin="anonymous"></script>
-</head>
-
-<body>
-	<nav>
-		<a href="index.html" class="code-text">lukasvasadi</a>
-		<div id="desktop-menu">
-			<a href="about.html">About</a>
-			<a href="tutorials.html">Tutorials</a>
-			<a href="mailto:lukas.vasadi@gmail.com"><i class="fa fa-envelope"></i></a>
-		</div>
-		<a href="javascript:void(0);" class="hamburger" onclick="menuDropdown()"><i class="fa fa-bars"></i></a>
-	</nav>
-	<div id="mobile-menu">
-		<a href="about.html">About</a>
-		<a href="tutorials.html">Tutorials</a>
-		<a href="mailto:lukas.vasadi@gmail.com"><i class="fa fa-envelope"></i></a>
-	</div>
-	<header>
-		<img src="images/programming_comp.jpg">
-		<div>
-			<h1>Linux, Arduino, Raspberry Pi, and more...</h1>
-			<p>Blend hardware and software to create feature-rich products <i class="fa fa-rocket"></i></p>
-		</div>
-	</header>
-	<main>
-		<section class="grid gallery">
-			<div class="tile">
-				<h2><a href="posts/linux.html">Linux</a></h2>
-				<a href="posts/linux.html"><img src="images/linux_debian_comp.jpg" alt=""></a>
-				<p>Become a superuser.</p>
-			</div>
-			<div class="tile">
-				<h2><a href="posts/powershell.html">PowerShell</a></h2>
-				<a href="posts/powershell.html"><img src="images/windows_laptop_comp.jpg" alt=""></a>
-				<p>Learn modern IT administration.</p>
-			</div>
-			<div class="tile">
-				<h2><a href="posts/git.html">Git</a></h2>
-				<a href="posts/git.html"><img src="images/git_comp.jpg" alt=""></a>
-				<p>Manage any code repository.</p>
-			</div>
-			<div class="tile">
-				<h2><a href="posts/raspi.html">Raspberry Pi</a></h2>
-				<a href="posts/raspi.html"><img src="images/raspi_comp.jpg" alt=""></a>
-				<p>Accelerate hardware prototyping.</p>
-			</div>
-		</section>
-	</main>
-	<footer>
-		<p>Copyright &copy; 2021 Lukas Vasadi</p>
-	</footer>
-	<script src="scripts/main.js"></script>
-</body>
-
+  <body>
+    <nav>
+      <a href="index.html" class="code-text">lukasvasadi</a>
+      <div id="desktop-menu">
+        <a href="about.html">About</a>
+        <a href="tutorials.html">Tutorials</a>
+        <a href="mailto:lukas.vasadi@gmail.com"
+          ><i class="fa fa-envelope"></i
+        ></a>
+      </div>
+      <a href="javascript:void(0);" class="hamburger" onclick="menuDropdown()"
+        ><i class="fa fa-bars"></i
+      ></a>
+    </nav>
+    <div id="mobile-menu">
+      <a href="about.html">About</a>
+      <a href="tutorials.html">Tutorials</a>
+      <a href="mailto:lukas.vasadi@gmail.com"><i class="fa fa-envelope"></i></a>
+    </div>
+    <div class="landing">
+      <img src="images/programming_comp.jpg" />
+      <div>
+        <h1>Linux, Arduino, Raspberry Pi, and more...</h1>
+        <p>
+          Blend hardware and software to create feature-rich products
+          <i class="fa fa-rocket"></i>
+        </p>
+      </div>
+    </div>
+    <main>
+      <section class="grid gallery">
+        <div class="tile">
+          <h2><a href="posts/linux.html">Linux</a></h2>
+          <a href="posts/linux.html"
+            ><img src="images/linux_debian_comp.jpg" alt=""
+          /></a>
+          <p>Become a superuser.</p>
+        </div>
+        <div class="tile">
+          <h2><a href="posts/powershell.html">PowerShell</a></h2>
+          <a href="posts/powershell.html"
+            ><img src="images/windows_laptop_comp.jpg" alt=""
+          /></a>
+          <p>Learn modern IT administration.</p>
+        </div>
+        <div class="tile">
+          <h2><a href="posts/git.html">Git</a></h2>
+          <a href="posts/git.html"><img src="images/git_comp.jpg" alt="" /></a>
+          <p>Manage any code repository.</p>
+        </div>
+        <div class="tile">
+          <h2><a href="posts/raspi.html">Raspberry Pi</a></h2>
+          <a href="posts/raspi.html"
+            ><img src="images/raspi_comp.jpg" alt=""
+          /></a>
+          <p>Accelerate hardware prototyping.</p>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <p>Copyright &copy; 2021 Lukas Vasadi</p>
+    </footer>
+    <script src="scripts/main.js"></script>
+  </body>
 </html>
